[project]
name = "ecg-visualization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Key5n", email = "k.nogami.472@stn.nitech.ac.jp" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "seaborn>=0.13.2",
    "wfdb>=4.3.0",
]

[project.scripts]
ecg-visualization = "ecg_visualization:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
