[project]
name = "ecg-visualization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Key5n", email = "k.nogami.472@stn.nitech.ac.jp" }
]
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.5",
    "numpy>=2.3.3",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "wfdb>=4.3.0",
]

[project.scripts]
ecg-visualization = "ecg_visualization:ecg_visualization"
RRI-histogram = "ecg_visualization:RRI_histogram"
md-rs = "ecg_visualization:run_md_rs"
experiment = "ecg_visualization:study_all_entities"
visualize = "ecg_visualization:visualize_all_studies"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
